# JARVIS

./: .gitmodules  CMakeLists.txt  README.md  macros.cmake  macros.txt
ext/: CMakeLists.txt
ext/android-cmake/: Apk.cmake
ext/glew_ext/: CMakeLists.txt
ext/glfw_ext/: CMakeLists.txt
src/: CMakeLists.txt
src/core/: CMakeLists.txt  appargs.h  application.cc  application.h  class.h  config.h  constness.h  debug.h  enum.h  function.h  mem.h  poolalloc.h  ptr.h  rand.h  ref.h  renderapplication.cc  renderapplication.h  singleton.h  sysfunc.h  typeinfo.cc  typeinfo.h  wrap.h
src/core/apple/: applesocket.cc  applesocket.h  applesysfunc.mm  pch.h  sysfunc.h  sysfunc.mm
src/core/functional/: function.h
src/core/interface/: socket.cc  socket.h
src/core/io/: assigns.cc  assigns.h  uri.cc  uri.h
src/core/math/: mat3.h  mat4.h  point.h  vec3.h  vec4.h  vector.h
src/core/network/: socket.cc  socket.h
src/core/threads/: persistentthread.cc  persistentthread.h  thread.cc  thread.h  threading.h  threadpool.cc  threadpool.h
src/core/util/: array.h  map.h  prioqueue.h  queue.h  string.h  timer.h  tuple.h
src/core/win32/: pch.h  sysfunc.cc  sysfunc.h  win32socket.cc  win32socket.h  win32sysfunc.cc  win32sysfunc.h
src/projects/: CMakeLists.txt
src/projects/smartsense/: CMakeLists.txt  imagestream.cc  imagestream.h  main.cc  movementtracker.cc  movementtracker.h  objectrecognizer.cc  objectrecognizer.h  recognizer.cc  recognizer.h  smartsenseapp.cc  smartsenseapp.h
src/render/: CMakeLists.txt  context.h  depthstenciltarget.h  indexbuffer.h  pipelinestate.h  renderstate.h  rendertarget.h  shader.h  shaderinstance.h  shaderstate.h  texture.h  uniformbuffer.h  vertexbuffer.h  window.h
src/render/display/: context.cc  context.h  window.cc  window.h
src/render/gl4/: context.cc  context.h  depthstenciltarget.cc  depthstenciltarget.h  indexbuffer.cc  indexbuffer.h  renderstate.cc  renderstate.h  rendertarget.cc  rendertarget.h  shader.cc  shader.h  shaderstate.cc  shaderstate.h  texture.cc  texture.h  types.h  vertexbuffer.cc  vertexbuffer.h  window.cc  window.h
src/render/metal/: context.h  context.mm  depthstenciltarget.h  depthstenciltarget.mm  indexbuffer.h  indexbuffer.mm  pipelinestate.h  pipelinestate.mm  renderstate.h  renderstate.mm  rendertarget.h  rendertarget.mm  replace.sh  shader.h  shader.mm  texture.h  texture.mm  types.h  uniformbuffer.h  uniformbuffer.mm  vertexbuffer.h  vertexbuffer.mm  window.h  window.mm
src/render/resources/: blendstate.h  buffer.cc  buffer.h  buffertypes.h  depthstenciltarget.cc  depthstenciltarget.h  indexbuffer.cc  indexbuffer.h  pipelinestate.cc  pipelinestate.h  pixeltypes.h  primitive.h  renderstate.cc  renderstate.h  renderstatetypes.h  rendertarget.cc  rendertarget.h  texture.cc  texture.h  vertexbuffer.cc  vertexbuffer.h  vertextypes.h
src/render/shaders/metal/: basic.metal
src/render/shading/: shader.cc  shader.h  shaderstate.cc  shaderstate.h  uniformbuffer.cc  uniformbuffer.h
src/render/util/: posteffect.cc  posteffect.h
src/tests/: CMakeLists.txt
src/tests/containertest/: CMakeLists.txt  main.cc
src/tests/mathtest/: CMakeLists.txt  main.cc
src/tests/nettest/: CMakeLists.txt  main.cc
src/tests/opencvtest/: CMakeLists.txt  main.cc
src/tests/testscrap/: CMakeLists.txt  main.cc
src/tests/threadingtest/: CMakeLists.txt  main.cc
src/tests/windowtest/: CMakeLists.txt  main.cc  windowapp.cc  windowapp.h
