#-------------------------------------------------------------------------------
# JARVIS
#-------------------------------------------------------------------------------

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS On)
CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2)
INCLUDE(macros.txt)
PROJECT(JARVIS)

include(CMakeDependentOption)

# interface library, every lib including this will also copy this libraries settings
ADD_LIBRARY(JARVIS INTERFACE)

IF(WIN32)
	ADD_DEFINITIONS(-D__WIN32__)	
ELSEIF(APPLE)
	ADD_DEFINITIONS(-D__APPLE__)
	SET(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++11")
	SET(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
	SET(CMAKE_XCODE_ATTRIBUTE_GCC_PRECOMPILE_PREFIX_HEADER YES)
	SET(CMAKE_XCODE_ATTRIBUTE_GCC_PREFIX_HEADER "src/core/config.h")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++ -g -Wall")

	SET(CMAKE_XCODE_ATTRIBUTE_GCC_UNROLL_LOOPS YES)
	SET(CMAKE_XCODE_ATTRIBUTE_GCC_OPTIMIZATION_LEVEL "fast")
ELSEIF(UNIX)
	ADD_DEFINITIONS(-D__UNIX__)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ENDIF()

FOREACH(i ${CMAKE_CXX_COMPILE_FEATURES})
	IF(${i} STREQUAL cxx_constexpr)
		ADD_DEFINITIONS(-D__CONST_EXPR_SUPPORTED__)
	ENDIF()
ENDFOREACH()

ADD_SUBDIRECTORY(src)