#-------------------------------------------------------------------------------
# Src
#-------------------------------------------------------------------------------

ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(http)
ADD_SUBDIRECTORY(ai)
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(render)

ADD_SUBDIRECTORY(projects)