
ADD_LIBRARY(glfw_ext INTERFACE)

TARGET_LINK_LIBRARIES(glfw_ext INTERFACE glfw)
TARGET_INCLUDE_DIRECTORIES(glfw_ext INTERFACE glfw/include/GLFW)

IF(APPLE)
	FIND_LIBRARY(COCOA_FRAMEWORK Cocoa)
	FIND_LIBRARY(IOKIT_FRAMEWORK IOKit)
	FIND_LIBRARY(COREVIDEO_FRAMEWORK CoreVideo)
	FIND_LIBRARY(OPENGL_FRAMEWORK OpenGL)
	TARGET_LINK_LIBRARIES(glfw_ext INTERFACE glfw ${COCOA_FRAMEWORK} ${IOKIT_FRAMEWORK} ${COREVIDEO_FRAMEWORK} ${OPENGL_FRAMEWORK})
ENDIF()

SET(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "Build the GLFW example programs")
SET(GLFW_BUILD_TESTS OFF CACHE BOOL "Build the GLFW test programs")
SET(GLFW_BUILD_DOCS OFF CACHE BOOL "Build the GLFW documentation")
SET(GLFW_INSTALL OFF CACHE BOOL "Generate installation target")	

ADD_SUBDIRECTORY(glfw)
SET_TARGET_PROPERTIES(glfw PROPERTIES FOLDER "ext/glfw")

